added file download

--- a/frontend/src/components/SideTab.module.css
+++ b/frontend/src/components/SideTab.module.css
@@ -54,7 +54,7 @@
   color: white;
 }
 
-.tab_container a {
+.info a {
   background-image: linear-gradient(
     90deg,
     rgba(131, 58, 180, 1) 0%,
