--- a/frontend/src/components/Form.module.css
+++ b/frontend/src/components/Form.module.css
@@ -1,16 +1,25 @@
+.collection_form {
+  display: flex;
+  padding: 1em;
+  padding-top: 0;
+}
+
 .login_form {
   background-color: rgba(8, 8, 8, 0.5);
   padding: 1.5em;
+}
+
+.form {
   width: 30em;
   border-radius: 3px;
 }
 
-.login_form h1 {
+.form h1 {
   margin: 0;
   color: white;
 }
 
-.login_form div {
+.form div {
   display: flex;
   flex-direction: column;
   margin-top: 1em;
@@ -18,7 +27,7 @@
   font-size: 1.5rem;
 }
 
-.login_form div input {
+.form div input {
   padding: 0.5em;
   border-radius: 4px;
   border: none;
@@ -26,11 +35,11 @@
   font-size: 1.2rem;
 }
 
-.login_form p {
+.form p {
   color: white;
 }
 
-.login_form p a {
+.form p a {
   margin-left: 0.3em;
   background-image: linear-gradient(
     90deg,
@@ -42,18 +51,25 @@
   -webkit-text-fill-color: transparent;
 }
 
-.login_form button {
+.form button {
   margin-top: 1em;
   padding: 0.5em 1em;
   font-size: 1.3rem;
   border-radius: 20px;
   border: none;
   color: white;
-  background: rgb(15, 13, 13);
+  background: rgb(48, 44, 44);
   margin-right: 2em;
 }
 
-.login_form button:hover {
+.collection_form button {
+  padding: 0em 1em;
+  height: 2.5em;
+  margin: 0;
+  margin-top: 2.2em;
+}
+
+.form button:hover {
   background-image: linear-gradient(
     90deg,
     rgba(131, 58, 180, 1) 0%,
