--- a/frontend/src/pages/Board.module.css
+++ b/frontend/src/pages/Board.module.css
@@ -2,7 +2,7 @@
   padding-top: 5em;
   margin-top: 10em;
   width: 100%;
-  height: 130vh;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -12,6 +12,7 @@
   width: 100%;
   height: 150vh;
   overflow: hidden;
+  z-index: 0;
 }
 
 .img {
