Auth/UpdateInfo: added form authentication

--- a/frontend/src/pages/Search.module.css
+++ b/frontend/src/pages/Search.module.css
@@ -65,7 +65,7 @@
   display: inline-block;
   width: 100%;
   overflow: hidden;
-  border-radius: 3px;
+  border-radius: 10px;
   height: 18em;
   width: 13em;
   object-fit: cover;
@@ -78,7 +78,12 @@
   transform: scale(1.2);
   object-fit: cover;
   transition: transform 1s;
-  border-radius: 3px;
+}
+
+.img:hover {
+  transition: transform 1s;
+  cursor: pointer;
+  border-radius: 0px;
 }
 
 .img img:hover {
