adde dynamic body scroll behavior

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,13 @@
-#body {
+body {
   background-color: rgb(15, 13, 13);
+}
+
+.y_scroll {
   overflow-x: hidden;
+}
+
+.no_scroll {
+  overflow: hidden;
 }
 
 * {
