--- a/frontend/src/pages/Profile.module.css
+++ b/frontend/src/pages/Profile.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(20, 20, 20);
-  padding: 1em 0.5em;
+  padding: 0.5em 0.2em;
   border-radius: 3px;
   margin-bottom: 0.5em;
 }
@@ -25,7 +25,22 @@
 
 .collections_icons {
   display: flex;
-  gap: 0.5em;
+  gap: 0.3em;
+  overflow-x: scroll;
+}
+
+.collections_icons::-webkit-scrollbar {
+  display: block;
+}
+
+.collections_icons::-webkit-scrollbar-track {
+  background-color: rgb(20, 20, 20);
+}
+
+.collections_icons::-webkit-scrollbar-thumb {
+  background: rgb(15, 15, 15);
+  border-radius: 10px;
+  border: solid rgb(20, 20, 20) 4px;
 }
 
 .collection_item:hover {
