--- a/frontend/src/pages/Search.module.css
+++ b/frontend/src/pages/Search.module.css
@@ -36,7 +36,12 @@
   margin: 0;
 }
 
-.artists_display div {
+.artists_items {
+  display: flex;
+  gap: 1em;
+}
+
+.artists_item {
   background-color: rgb(15, 15, 15);
   width: fit-content;
   padding: 0.5em;
