--- a/frontend/src/pages/Board.module.css
+++ b/frontend/src/pages/Board.module.css
@@ -25,6 +25,48 @@
   border: solid rgb(15, 13, 13);
 }
 
+@media (max-width: 1200px) {
+  .img {
+    height: 12em;
+    width: 10em;
+  }
+}
+
+@media (max-width: 1100px) {
+  .main_board {
+    height: 230vh;
+    width: 150%;
+  }
+
+  .img {
+    height: 12em;
+    width: 10em;
+  }
+}
+
+@media (max-width: 800px) {
+  .main_board {
+    width: 170%;
+  }
+
+  .img {
+    height: 12em;
+    width: 10em;
+  }
+}
+
+@media (max-width: 550px) {
+  .main_board {
+    width: 200%;
+    height: 230vh;
+  }
+
+  .img {
+    height: 12em;
+    width: 10em;
+  }
+}
+
 .img img {
   width: inherit;
   height: inherit;
