--- a/frontend/src/components/SideTab.module.css
+++ b/frontend/src/components/SideTab.module.css
@@ -12,6 +12,24 @@
   overflow-x: hidden;
 }
 
+@media (max-width: 1100px) {
+  .tab_container {
+    width: 18em;
+  }
+}
+
+@media (max-width: 800px) {
+  .tab_container {
+    width: 15em;
+  }
+}
+
+@media (max-width: 700px) {
+  .tab_container {
+    width: 12em;
+  }
+}
+
 .tab_container::-webkit-scrollbar {
   width: 10px;
   display: block;
@@ -56,6 +74,13 @@
   width: 22em;
 }
 
+@media (max-width: 800px) {
+  .info,
+  .info_actions {
+    width: 13em;
+  }
+}
+
 .tab_container p:nth-child(2) {
   margin-bottom: 0;
 }
@@ -66,6 +91,20 @@
   object-fit: cover;
   border: solid 1px white;
   border-radius: 3px;
+}
+
+@media (max-width: 1100px) {
+  .tab_container img {
+    width: 15em;
+    height: 15em;
+  }
+}
+
+@media (max-width: 700px) {
+  .tab_container img {
+    width: 12em;
+    height: 15em;
+  }
 }
 
 .info_actions div button {
