--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -21,13 +21,18 @@ a {
   margin: 0;
 }
 
+@media (max-width: 800px) {
+  .logo {
+    font-size: 3.5rem;
+  }
+}
+
 header div {
   display: flex;
   align-items: center;
 }
 
 header div p {
-  color: white;
   font-size: 1.3rem;
   margin: 0;
   background-image: linear-gradient(
@@ -39,6 +44,12 @@ header div p {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-right: 0.5em;
+}
+
+@media (max-width: 800px) {
+  header div p {
+    font-size: 1rem;
+  }
 }
 
 header div p:hover {
@@ -53,6 +64,12 @@ header input {
   font-size: 1.2rem;
 }
 
+@media (max-width: 800px) {
+  header input {
+    width: 8em;
+  }
+}
+
 header button {
   padding: 0.5em 1em;
   font-size: 1.3rem;
@@ -63,6 +80,12 @@ header button {
   background: rgb(15, 13, 13);
   transition: background-color 1s;
   margin-right: 2em;
+}
+
+@media (max-width: 800px) {
+  header button {
+    font-size: 1rem;
+  }
 }
 
 header button:hover {
