--- a/frontend/src/components/Form.module.css
+++ b/frontend/src/components/Form.module.css
@@ -4,9 +4,20 @@
   padding-top: 0;
 }
 
+@media (max-width: 700px) {
+  .collection_form {
+    padding: 0em;
+    padding-bottom: 0.5em;
+  }
+}
+
 .login_form {
-  background-color: rgba(8, 8, 8, 0.5);
   padding: 1.5em;
+  background-color: none;
+}
+
+.login_form .black_background {
+  background-color: rgba(8, 8, 8, 0.5);
 }
 
 .form {
@@ -19,6 +30,12 @@
   color: white;
 }
 
+@media (max-width: 550px) {
+  .form h1 {
+    font-size: 1.8rem;
+  }
+}
+
 .form div {
   display: flex;
   flex-direction: column;
@@ -27,7 +44,14 @@
   font-size: 1.5rem;
 }
 
-.form div input {
+@media (max-width: 550px) {
+  .form div {
+    font-size: 1.3rem;
+  }
+}
+
+.collection_form div input,
+.login_form div input {
   padding: 0.5em;
   border-radius: 4px;
   border: none;
@@ -37,6 +61,12 @@
 
 .form p {
   color: white;
+}
+
+@media (max-width: 550px) {
+  .form p {
+    font-size: 0.8rem;
+  }
 }
 
 .form p a {
@@ -62,11 +92,28 @@
   margin-right: 2em;
 }
 
+@media (max-width: 550px) {
+  .form button {
+    font-size: 1.2rem;
+  }
+}
+
 .collection_form button {
   padding: 0em 1em;
   height: 2.5em;
   margin: 0;
   margin-top: 2.2em;
+}
+
+@media (max-width: 700px) {
+  .collection_form button {
+    padding: 0em 1em;
+    font-size: 1.2rem;
+  }
+
+  .collection_form div input {
+    margin-right: 0.5em;
+  }
 }
 
 .form button:hover {
