--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -1,4 +1,4 @@
-header {
+.header {
   position: fixed;
   top: 0;
   width: 100%;
@@ -21,20 +21,53 @@ a {
   margin: 0;
 }
 
+.dropdown_menu {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 0;
+  top: 4em;
+  padding: 0.5em;
+  padding-top: 1em;
+  background-color: rgb(19, 17, 17);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.dropdown_menu div {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown_menu p {
+  margin: 0;
+  margin-left: 0.8em;
+}
+
+.header .dropdown_menu button {
+  padding: 0.5em 1em;
+  background-color: none;
+  border-radius: 20px;
+  border: none;
+  color: white;
+  font-family: "Geologica", sans-serif;
+  transition: background-color 1s;
+}
+
 @media (max-width: 800px) {
   .logo {
     font-size: 3.5rem;
   }
 }
 
-header div {
+.header_actions {
   display: flex;
   align-items: center;
 }
 
-header div p {
+.header_actions p,
+.dropdown_menu p {
   font-size: 1.3rem;
-  margin: 0;
   background-image: linear-gradient(
     90deg,
     rgba(131, 58, 180, 1) 0%,
@@ -47,48 +80,49 @@ header div p {
 }
 
 @media (max-width: 800px) {
-  header div p {
+  .header_actions p,
+  .dropdown_menu p {
     font-size: 1rem;
   }
 }
 
-header div p:hover {
+.header_actions p:hover {
   cursor: pointer;
 }
 
-header input {
+.header input {
   padding: 0.5em;
   border-radius: 4px;
   border: none;
-  margin-right: 1em;
+  margin-right: 2em;
   font-size: 1.2rem;
 }
 
 @media (max-width: 800px) {
-  header input {
+  .header input {
     width: 8em;
   }
 }
 
-header button {
+.header button {
   padding: 0.5em 1em;
   font-size: 1.3rem;
   border-radius: 20px;
   border: none;
   color: white;
   font-family: "Geologica", sans-serif;
-  background: rgb(15, 13, 13);
+  background: none;
   transition: background-color 1s;
   margin-right: 2em;
 }
 
 @media (max-width: 800px) {
-  header button {
+  .header button {
     font-size: 1rem;
   }
 }
 
-header button:hover {
+.header button:hover {
   background: rgb(131, 58, 180);
   background: linear-gradient(
     90deg,
