--- a/frontend/src/components/Popup.module.css
+++ b/frontend/src/components/Popup.module.css
@@ -1,9 +1,10 @@
 .backdrop {
-  background-color: rgba(194, 61, 61, 0.3);
+  background-color: rgba(185, 62, 62, 0.3);
   width: 100%;
   height: 100vh;
   position: absolute;
   top: 0;
+  z-index: 100;
 }
 
 .popup h1 {
@@ -13,12 +14,12 @@
 .popup {
   padding: 1em 2em;
   background-color: rgb(17, 15, 15);
-  position: absolute;
-  top: 6em;
-  left: 36%;
+  margin: 0 auto;
+  margin-top: 2em;
   border-radius: 5px;
   border: solid 5px rgb(34, 33, 33);
   color: white;
+  width: 15em;
 }
 
 .popup p {
@@ -26,15 +27,20 @@
   margin: 0.5em 0;
 }
 
-.popup button {
+.popup div {
   position: relative;
-  margin-top: 0em;
+  width: 100%;
+  height: 3em;
+}
+
+.popup button {
+  position: absolute;
   padding: 0.5em 1em;
   font-size: 1.3rem;
   border-radius: 20px;
+  right: 0;
   border: none;
   background: rgb(48, 44, 44);
-  margin-right: 2em;
   color: white;
 }
 
@@ -46,4 +52,20 @@
     rgba(252, 69, 159, 1) 100%
   );
   cursor: pointer;
+}
+
+@media (max-width: 700px) {
+  .popup p {
+    font-size: 1.2rem;
+  }
+
+  .popup h1 {
+    font-size: 1.5rem;
+  }
+
+  .popup button {
+    position: absolute;
+    padding: 0.5em 0.8em;
+    font-size: 1.2rem;
+  }
 }
