--- a/frontend/src/pages/Board.module.css
+++ b/frontend/src/pages/Board.module.css
@@ -14,6 +14,12 @@
   z-index: 0;
 }
 
+.main_board_mobile {
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+}
+
 .img {
   display: inline-block;
   width: 100%;
@@ -63,7 +69,14 @@
 
   .img {
     height: 12em;
-    width: 10em;
+    width: 8em;
+  }
+}
+
+@media (max-width: 400px) {
+  .img {
+    height: 10em;
+    width: 5em;
   }
 }
 
