--- a/frontend/src/pages/Search.module.css
+++ b/frontend/src/pages/Search.module.css
@@ -19,7 +19,8 @@
 
 @media (max-width: 700px) {
   .search_display {
-    width: 25em;
+    width: 100%;
+    margin-left: 0em;
   }
 }
 
@@ -51,6 +52,12 @@
 @media (max-width: 900px) {
   .artists_display h1 {
     font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .artists_display h1 {
+    font-size: 1.3rem;
   }
 }
 
@@ -148,6 +155,12 @@
   text-align: center;
 }
 
+@media (max-width: 700px) {
+  .no_result h1 {
+    font-size: 2rem;
+  }
+}
+
 .no_result span {
   font-size: 5rem;
   margin: 0 auto;
@@ -159,4 +172,10 @@
   );
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 700px) {
+  .no_result span {
+    font-size: 3rem;
+  }
 }
